coverage plugins added